iMessage Display and Alignment Fixes (#65)
* Sent Replies

* More Reply Fixes

* Alignment

* Replies Finished (Bug with Edits)

* Bubble Tails

* Alignment Tweaks

* Send Reply with Edit (Still needs to be processed)

* Local Edit Fix

* Remote Edit Fix

--- a/TinyChat.css
+++ b/TinyChat.css
@@ -65,17 +65,79 @@ details {
 	width: 25%;
 }
 
-p {
-	margin: 0px;
+.sent,
+.received,
+.typing {
+	--r: 1em;
+	--t: 1em;
+	padding: calc(2*var(--r)/3);
+	-webkit-mask:
+		radial-gradient(var(--t) at var(--_d) 0, #0000 98%, #000 102%) var(--_d) 100%/calc(100% - var(--r)) var(--t) no-repeat,
+		conic-gradient(at var(--r) var(--r), #000 75%, #0000 0) calc(var(--r)/-2) calc(var(--r)/-2) padding-box,
+		radial-gradient(50% 50%, #000 98%, #0000 101%) 0 0/var(--r) var(--r) space padding-box;
+}
+
+.typing,
+.sentReply,
+.receivedReply,
+.sent,
+.received {
+	padding: 1em;
+	border-radius: 1em;
+	width: 50%;
+	margin: 0.5em;
+}
+
+.sentReply,
+.receivedReply {
+	padding-bottom: 0;
+	padding-left: 0;
+	padding-right: 0;
+	margin-bottom: 0;
+	margin-left: 0;
+	margin-right: 0;
+	width: 100%;
+}
+
+.sentReply:has(.sentReply),
+.receivedReply:has(.sentReply),
+.sent:has(.sentReply),
+.received:has(.sentReply),
+.sentReply:has(.receivedReply),
+.receivedReply:has(.receivedReply),
+.sent:has(.receivedReply),
+.received:has(.receivedReply) {
+	padding-top: 0;
+	margin-top: 0;
+}
+
+.receivedReply {
+	text-align: left;
+}
+
+.sentReply {
+	text-align: right;
 }
 
 .received,
 .typing {
+	--_d: 0%;
+	border-left: var(--t) solid #dddddd;
+	margin-right: var(--t);
+	place-self: start;
 	text-align: left;
+	background-color: #dddddd;
+	margin-right: 40%;
 }
 
 .sent {
+	--_d: 100%;
+	border-right: var(--t) solid #0074d9;
+	margin-left: var(--t);
+	place-self: end;
 	text-align: right;
+	background-color: #0074d9;
+	margin-left: 40%;
 }
 
 .context-menu {
